# aruta.sh

./: .gitignore  CHANGELOG.md  CNAME  README.md  index.html  manifest.json  test.html
ArcaneDuel/: arcane-duel.css  arcane-duel.js
ExampleApps/snake/: index.js  manifest.json
JavaScript/: Index.js  achievements.js  app.js  appearance.js  circles.js  config.js  content.js  contextmenu.js  core.js  cursor.js  db.js  defaults.js  desktop.js  easter-eggs.js  effects.js  extras.js  flying-letters.js  i18n.js  installer.js  live.js  os-settings.js  os-sysinfo.js  os-windows.js  os.js  parallax.js  particles.js  permissions.js  profile.js  registry.js  repos.js  sandbox.js  settings.js  share.js  sound.js  state.js  storage.js  summon.js  sysinfo.js  taskbar-autohide.js  taskbar.js  (+6 more)
Json/: DataInfo.json
Style/: background.css  base.css  core.css  desktop.css  effects.css  main.css  os.css  responsive.css  sections.css  settings.css  start-menu.css  style.css  sysinfo.css  taskbar.css  terminal.css  variables.css  widgets.css  windows.css
defaultPackages/: defaults.json
defaultPackages/arcaneduel/: index.js  manifest.json  style.css
defaultPackages/clip/: index.js  manifest.json
defaultPackages/dice-roller/: manifest.json  style.css  ui.js
defaultPackages/filemanager/: index.js  manifest.json  style.css
defaultPackages/fortune/: index.js  manifest.json
defaultPackages/gba/core-src/: CMakeLists.txt  root-cmake-no-pthreads.patch  stmain.c
docs/: README.md  architecture.md  ctx-api.md  examples.md  packages.md  permissions.md  profile.md  tavern.md  widgets.md
(+52 files in other folders)
